<resources>
    <string name="app_name">Pikally</string>
    <string name="title_activity_drawer"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Instructions</string>
    <string name="menu_gallery">Upload Files</string>
    <string name="menu_slideshow">Payment</string>
    <string name="menu_tools">Chat With Us</string>
    <string name="menu_share">Privacy Policy</string>
    <string name="menu_send">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first">1. Send Us your Photos through the upload files section,by email or our chats.Include the Instructions on what you want.You can also share large files with Us through WeTransfer,Dropbox or google drive.</string>
    <string name="second">2. We shall provide you with a no-obligation price quote.</string>
    <string name="third">3. Once you are okay with the price quote,you can head to the payment section of our app and select your prefered mode of payment to make the payment</string>
    <string name="forth">4. When payment is received we will notify you by email and start processing your order.</string>
    <string name="fifth">5. Edited pictures will be delivered to you in the chat section and by email after your suggestions or changes have been done.</string>
    <string name="policy1">We use your data to improve the services.By using the services,you agree to the collection and use of information in accordance with this policy.Unless otherwise defined in this privacy Policy ,Terms used in our Terms and conditions.</string>
    <string name="policy2">We collect several different types of information for various purposes and improve our Service to you</string>
    <string name="policy3">While using our Services We may ask you to provide us with certain personally identifiable informations that can be used to contact or identify you (Personal Data).Personallyidentiable information may be include but its not limited to:</string>
</resources>
