<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.privacyFragment">

    <!-- TODO: Update blank fragment layout -->
   <ScrollView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:padding="10dp"
           >

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Privacy Policy"
               android:layout_marginLeft="100dp"
               android:textSize="20sp"
               android:textColor="#000000"
               android:layout_marginTop="10dp"
               android:textStyle="bold"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="15dp"
               android:text="Effective Date August 01,2019"
               android:textSize="20sp"
               android:textColor="#0A0A0A"
               android:textStyle="bold"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:textSize="18sp"
               android:text="@string/policy1"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="15dp"
               android:text="Information Collection And Use"
               android:textSize="20sp"
               android:textColor="#0A0A0A"
               android:textStyle="bold"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:textSize="18sp"
               android:text="@string/policy2"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="15dp"
               android:textSize="18sp"
               android:text="Types of Data Collected"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:textSize="18sp"
               android:text="Personal Data"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="15dp"
               android:textSize="18sp"
               android:text="@string/policy3"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="15dp"
               android:textSize="18sp"
               android:text="Personal Data"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:textSize="18sp"
               android:text="Email address"
               android:layout_marginLeft="50dp"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:textSize="18sp"
               android:text="First Name and Last Name"
               android:layout_marginLeft="50dp"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:textSize="18sp"
               android:text="Cookies and Usage Data"
               android:layout_marginLeft="50dp"
               android:layout_marginBottom="15dp"
               />







       </LinearLayout>
   </ScrollView>

</FrameLayout>